--- a/assets/assets/translations/en.json
+++ b/assets/assets/translations/en.json
@@ -25,6 +25,7 @@
   "events":"Events",
   "total_users":"Total users",
   "total_bookings":"Total Bookings",
+  "total_days":"Total Days",
   "privacy_policy":"Privacy Policy",
   "website_url":"Website Url",
   "write_here": "Write here...",
@@ -143,6 +144,18 @@
   "are_you_sure_you_want_to_logout":"Are you sure you want to logout?",
   "yes":"Yes",
   "no":"No",
+  "per_day_price":"Per Day Price",
+  "event_description":"Event Description",
+  "event_timings":"Event Timings",
+  "start_and_end_date":"Start and End Date",
+  "mobile_food_service_unit":"Mobile Food Service Unit",
+  "name_of_mobile_food_service_unit":"Name of mobile food service unit",
+  "permit_number":"Permit Number",
+  "click_to_eat_service":"Click to eat service",
+  "name_of_mobile_food_service_unit_owner":"Name of mobile food service unit Owner",
+  "food_vending_location":"Food Vending Location",
+  "property_food_vending_location_address":"Property/Food Vending Location Address",
+  "owner_address":"Owner Address",
   "toilet_facility_address":"Toilet Facility Address",
   "toilet_facilities_must_be_located_within_200_feet_from_the_mobile_food_service_unit":"Toilet facilities must be located within 200 feet from the mobile food \nservice unit. ",
   "toiler_use_agreement_for_mobile_food_service_unit":"TOILET USE AGREEMENT FOR MOBILE FOOD \nSERVICE UNIT",
