--- a/assets/assets/translations/en.json
+++ b/assets/assets/translations/en.json
@@ -43,6 +43,9 @@
   "total":"Total",
   "all":"All",
   "active":"Active",
+  "search_people":"Search people",
+  "enter_message":"Enter your message here",
+  "active_chats":"Active Chats",
   "blocked":"Blocked",
   "show":"Show",
   "address":"Address",
@@ -85,6 +88,7 @@
   "help_center_management":"Help Center Management",
   "chat_management":"Chat Management",
   "female":"Female",
+  "chat":"Chat",
   "renter_name":"Renter Name",
   "property_capital":"PROPERTY",
   "save": "Save",
