--- a/assets/assets/translations/en.json
+++ b/assets/assets/translations/en.json
@@ -5,6 +5,9 @@
   "forgot_password": "Forgot password ?",
   "email": "E-mail",
   "password": "Password",
+  "deleted": "Deleted",
+  "delete": "Delete",
+  "reject": "Reject",
   "login_now": "Login Now",
   "please_enter_your_email_address":"Please enter your email address",
   "invalid_email_address": "Invalid email address",
@@ -70,6 +73,7 @@
   "add_sub_admin":"Add Sub-Admin",
   "upload_picture":"Upload Picture",
   "upload":"Upload",
+  "full_name":"Full Name",
   "first_name":"First Name",
   "last_name":"Last Name",
   "enter_name":"Enter name",
@@ -90,6 +94,7 @@
   "privacy_management":"Privacy Management",
   "help_center_management":"Help Center Management",
   "chat_management":"Chat Management",
+  "manage_property_type":"Manage Property Type",
   "female":"Female",
   "chat":"Chat",
   "renter_name":"Renter Name",
@@ -107,6 +112,7 @@
   "please_enter_your_old_password":"Please enter your old password",
   "add": "+ ADD",
   "add_privacy_policy": "Add Privacy Policy",
+  "please_enter_the_full_name":"Please enter the full name",
   "please_enter_the_first_name":"Please enter the first name",
   "please_enter_the_Last_name":"Please enter the Last name",
   "please_re_enter_your_password":"Please re-enter your password",
@@ -162,6 +168,7 @@
   "name_of_mobile_food_service_unit_owner":"Name of mobile food service unit Owner",
   "food_vending_location":"Food Vending Location",
   "property_food_vending_location_address":"Property/Food Vending Location Address",
+  "food_vending_owner_location_address":"Food Vending Owner Location Address",
   "owner_address":"Owner Address",
   "toilet_facility_address":"Toilet Facility Address",
   "toilet_facilities_must_be_located_within_200_feet_from_the_mobile_food_service_unit":"Toilet facilities must be located within 200 feet from the mobile food service unit. ",
