--- a/assets/assets/translations/en.json
+++ b/assets/assets/translations/en.json
@@ -130,6 +130,9 @@
   "property_picture_1":"Property \nPicture",
   "property_name":"Property Name",
   "property_type":"Property Type",
+  "add_property_type":"Add Property Type",
+  "sr_no":"Sr No.",
+  "added_by":"Added by",
   "property_type_1":"Property \nType",
   "property_owner":"Property Owner",
   "date":"Date",
