--- a/assets/assets/translations/en.json
+++ b/assets/assets/translations/en.json
@@ -90,7 +90,8 @@
   "assign_role":"Assign Role",
   "owner_management":"Owner Management",
   "renter_management":"Renter Management",
-  "property_management":"Property Management",
+  "property_request_management":"Property Request Management",
+  "booking_request_management":"Booking Request Management",
   "privacy_management":"Privacy Management",
   "help_center_management":"Help Center Management",
   "chat_management":"Chat Management",
